Create presentation template

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Pi-Hole: Tampering is a good thing</title>
+		<title>Pi-hole: Tampering is a good thing</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -27,51 +27,44 @@
 			<div class="slides" >
 
 			<section>
-			  <!--Introduction-->
+			  <!--INTRODUCTION-->
 
 			  <section data-background="images/black-logo.png">
 			    <aside class="notes">
 
 			    </aside>
-				<h1>P<span style=color:#00ff00;text-transform:lowercase>I</span>-Hole:</h1>
+				<h1>P<span style=color:#00ff00;text-transform:lowercase>I</span>-hole:</h1>
 			    <h3>Tamper<span style=color:#00ff00;text-transform:lowercase>I</span>ng <span style=color:#00ff00;text-transform:lowercase>I</span>s a Good Th<span style=color:#00ff00;text-transform:lowercase>I</span>ng</h3>
 			  </br>
 
-			  Jun<span style=color:#00ff00;text-transform:lowercase>I</span>or T<span style=color:#00ff00;text-transform:lowercase>I</span>dal</br>
-			  Chad Clark</br>
-			  Bryan Ne<span style=color:#00ff00;text-transform:lowercase>I</span>l Jones</br>
+			  Jun<span style=color:#00ff00;text-transform:lowercase>I</span>or T<span style=color:#00ff00;text-transform:lowercase>I</span>dal</br><small>C<span style=color:#00ff00;text-transform:lowercase>I</span>ty Un<span style=color:#00ff00;text-transform:lowercase>I</span>vers<span style=color:#00ff00;text-transform:lowercase>I</span>ty of New York</small></br>
+			  Chad Clark</br><small>H<span style=color:#00ff00;text-transform:lowercase>I</span>ghland Park Publ<span style=color:#00ff00;text-transform:lowercase>I</span>c L<span style=color:#00ff00;text-transform:lowercase>I</span>brary</small></br>
+			  Bryan Ne<span style=color:#00ff00;text-transform:lowercase>I</span>l Jones</br><small>Nashv<span style=color:#00ff00;text-transform:lowercase>I</span>lle Publ<span style=color:#00ff00;text-transform:lowercase>I</span>c L<span style=color:#00ff00;text-transform:lowercase>I</span>brary</small>
 
 				</section>
-
-			  <section data-background="images/black-logo.png">
-			    <aside class="notes">
-
-			    </aside>
-				  ## Slide 1
-				</section>
-
 			</section>
 
 			<section>
-			  <!--PRIVACY CONCERNS-->
+			  <!--PART 1: PRIVACY CONCERNS-->
 
 				<section data-background="images/black-logo.png">
 				  <aside class="notes">
 
 			    </aside>
-				  Slide 2
+				<h1>What does pr<span style=color:#00ff00;text-transform:lowercase>I</span>vacy mean to you?</h1>
 				</section>
 
 		  </section>
 
 	    <section>
-	      <!--PI-HOLE HANDS ON-->
+	      <!--PART 2: PI-HOLE HANDS ON-->
 
 				<section data-background="images/black-logo.png">
 				  <aside class="notes">
 
 			    </aside>
-				  Slide 2
+				  <h1>What <span style=color:#00ff00;text-transform:lowercase>I</span>s P<span style=color:#00ff00;text-transform:lowercase>I</span>-hole?</h1>
+				  <img src="images/pi-hole-logo2.png"></img>
 				</section>
 
 		  </section>
