--- a/index.html
+++ b/index.html
@@ -45,13 +45,145 @@
 			</section>
 
 			<section>
-			  <!--PART 1: PRIVACY CONCERNS-->
+			  <!--PART 1 SLIDE 1.1-->
 
 				<section data-background="images/black-logo.png">
 				  <aside class="notes">
-
+            If you say “privacy” everyone understands what you mean, but if you ask people to define privacy that’s when the party starts. Icebreaker--what’s your name, a hope and challenge in the context of privacy. Snowden, “Privacy is the right to a self.”
 			    </aside>
-				<h1>What does pr<span style=color:#00ff00;text-transform:lowercase>I</span>vacy mean to you?</h1>
+				<h1>Pr<span style=color:#00ff00;text-transform:lowercase>I</span>vacy</h1>
+				<p class="fragment fade-left"><b>What are our hopes?</b></p>
+				<p class="fragment fade-left"><b>What are our challenges?</b></p>
+				</section>
+
+			  <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.2-->
+			    <aside class="notes">
+In 2014, Shoshana Zuboff coins the term ‘surveillance capitalism’.  This is when data is gathered about people in secret, or with there nominal consent. This data, or metadata about that data, is sold; or products are marketed using that data. Results: constant commercial surveillance, you think your phone is reading your mind, and what else?
+			    </aside>
+				<img src="images/Zuboff-diagram.png"></img>
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.3-->
+			    <aside class="notes">
+Privacy violations have many known harms. Most malware comes from ads. More sinister are phishing attacks that lead to data breaches or doxing. Hey give us your email? Every time you do this you expose yourself to more phishing attempts. Types harm that can come from privacy violations: identity theft, medical identity theft, doxing (blackmail, sextortion, swatting), stalking / partner abuse. Which is to say nothing of the qualitative costs: social isolation, emotional pain.
+			    </aside>
+				<h4><span style=font-size:60px>malware / ph<span style=color:#00ff00;text-transform:lowercase>i</span>sh<span style=color:#00ff00;text-transform:lowercase>i</span>ng / dox<span style=color:#00ff00;text-transform:lowercase>i</span>ng</span></h4>
+					<img src="images/phishing.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.4-->
+			    <aside class="notes">
+Those personal harms. What about more large scale ones like nation-state scale psyops; e.g., targeted disinformation campaigns to manipulate elections. My mother is a white, working class voter with a relatively low education level in western PA. She was a real hot commodity during the last presidential election. What if you got the data you got was wrong? I should note Cambridge Analytica got their data in a clandestine manner, and we know about it because of a whistleblower. They just got caught. This kind of profiling is happening all the time.
+			    </aside>
+				<img src="images/redzuck.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.5-->
+			    <aside class="notes">
+Reverse redlining. This when you deliberately target people in a geographic region. The most notorious example was during the subprime mortgage crisis when bad loans were heavily pushed at African Americans. Mosaic effect can be used to reverse engineer non-PII. You can learn someone's sex, gender, race, political affiliation, income, health info. This can lead to employment, housing, and education discrimination directly or indirectly. This, historically, is why libraries have been vigilant about protecting patron reading histories.
+			    </aside>
+				<img src="images/redline.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.6-->
+			    <aside class="notes">
+Of course, there are more direct kinds of political suppression. The ClearviewAI facial recognition app has been sold to 600 law enforcement agencies. This scrapes the internet for your face and name. The police in Chicago would scrape the public social media of families of shooting victims.
+			    </aside>
+				 <img src="images/xinjiang.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.7-->
+			    <aside class="notes">
+How does this digital tracking work? Cookies. Between April and August 2018, I visited 401 sites and 1053 third party sites. Notice the third party sites. Here’s a map. That's nearly two and half times the sites I actually saw in my browser window. One study found 55% of website load time was loading third party trackers. Aside, Pi-hole will also help with load times.
+			    </aside>
+				<img src="images/lightbeam.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.8-->
+			    <aside class="notes">
+Dark patterns. This is when sites/services confuse you or shame you into giving away data.  They have confusing interfaces or they use ‘fear of missing out,’ or straight up deception to get you to make the choices they want. Here's an example from my own library. Other examples: 1)  ‘are you sure you don't want enable desktop notifications?’  2) resetting all your preferences between updates, 3) or an impossible long list of options.
+			    </aside>
+					<h4><span style=font-size:60px>dark patterns</span></h4>
+					<img src="images/darkpattern.png"></img>
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.9-->
+			    <aside class="notes">
+Do we really have a choice to opt-out? This is also an extension of the digital inclusion problem. Us here at Code4Lib are probably more capable of shrinking our data footprint than others.
+			    </aside>
+          <img src="images/consumer-score.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.10-->
+			    <aside class="notes">
+Smart” devices are really kind of dangerous and dumb. Amazon Echo, Google Home, Nest, and Apple’s Siri keep a record of the words spoken to it. According to Gregory Folwer of the Washington Post, there are little regulations or watchdogs that keep that type of data collection in check. This data can be used against us. Warrant have been issued for Alexa data. Footage collected by law enforcement through Ring doorbells can be actively shared with other agencies. Facial recognition tech in schools can be used during an incident, such as a mass shooting, but also be used to monitor students and possibly faculty.
+			    </aside>
+				<img src="images/ring-podcast.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.11-->
+			    <aside class="notes">
+Facial recognition is not only inaccurate but it reinforces stereotypes. Joy Buolamwini, an MIT researcher, found that 3 major tech companies that utilized AI-based facial recognition inaccurately identified subjects’ race and gender the darker their skin. One of the problems identified was the system had a faulty data set that basically lacked diversity that the machine could learn from.
+			    </aside>
+				<img src="images/ai-bias.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.12-->
+			    <aside class="notes">
+“The China Cables reveal how the system is able to amass vast amounts of intimate personal data through warrantless manual searches, facial recognition cameras, and other means to identify candidates for detention, flagging for investigation hundreds of thousands merely for using certain popular mobile phone apps.”
+			    </aside>
+				<img src="images/china-cables.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.13-->
+			    <aside class="notes">
+In 2019, over sixty rights orgs wrote to the House Oversight and Reform Committee calling for a federal moratorium on facial recognition. LFP was one of them.
+			    </aside>
+				<img src="images/fr-moratorium.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.14-->
+			    <aside class="notes">
+Last week this happened.
+			    </aside>
+				<img src="images/clearview-list.png"></img>
+
+				</section>
+
+			   <section data-background="images/black-logo.png">
+				  <!--PART 1 SLIDE 1.15-->
+			    <aside class="notes">
+Erin Glass asserts that privacy advocates are at risk of developing a Cassandra complex, we speak the truth but no one will believe us.  So what are some of our paths forward? [Maybe bring back some of the hope folks said at the beginning.] Zuboff asks, “Who decides, who decides.” Let’s move the deciding back to communities. 1) Facial recognition bans. This is happening in some cities and some of the one name tech companies have sent cease and desists to Clearview AI. 2) User space adoption of FLOSS (free, libre, open source, software). 3) A non-commercial decentralized internet.
+			    </aside>
+          <h3>future v<span style=color:#00ff00;text-transform:lowercase>I</span>s<span style=color:#00ff00;text-transform:lowercase>I</span>ons / escape routes</h3>
+			     <p class="fragment fade-left"><b>Fac<span style=color:#00ff00;text-transform:lowercase>I</span>al recogn<span style=color:#00ff00;text-transform:lowercase>I</span>t<span style=color:#00ff00;text-transform:lowercase>I</span>on bans</b></p>
+			     <p class="fragment fade-left"><b>User space FLOSS</b></p>
+			     <p class="fragment fade-left"><b>Non-commerc<span style=color:#00ff00;text-transform:lowercase>I</span>al decentral<span style=color:#00ff00;text-transform:lowercase>I</span>zed <span style=color:#00ff00;text-transform:lowercase>I</span>nternet</b></p>
+
+
 				</section>
 
 		  </section>
