Punch up slides

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<p class="fragment fade-left"><b>What are our challenges?</b></p>
 				</section>
 
-			  <section data-background="images/black-logo.png">
+			  <section data-transition="fade-in" data-background="images/black-logo.png">
 				  <!--PART 1 SLIDE 1.2-->
 			    <aside class="notes">
 In 2014, Shoshana Zuboff coins the term ‘surveillance capitalism’.  This is when data is gathered about people in secret, or with there nominal consent. This data, or metadata about that data, is sold; or products are marketed using that data. Results: constant commercial surveillance, you think your phone is reading your mind, and what else?
@@ -182,8 +182,6 @@ Erin Glass asserts that privacy advocates are at risk of developing a Cassandra 
 			     <p class="fragment fade-left"><b>Fac<span style=color:#00ff00;text-transform:lowercase>I</span>al recogn<span style=color:#00ff00;text-transform:lowercase>I</span>t<span style=color:#00ff00;text-transform:lowercase>I</span>on bans</b></p>
 			     <p class="fragment fade-left"><b>User space FLOSS</b></p>
 			     <p class="fragment fade-left"><b>Non-commerc<span style=color:#00ff00;text-transform:lowercase>I</span>al decentral<span style=color:#00ff00;text-transform:lowercase>I</span>zed <span style=color:#00ff00;text-transform:lowercase>I</span>nternet</b></p>
-
-
 				</section>
 
 		  </section>
@@ -192,10 +190,157 @@ Erin Glass asserts that privacy advocates are at risk of developing a Cassandra 
 	      <!--PART 2: PI-HOLE HANDS ON-->
 
 				<section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.0-->
+				  <aside class="notes">
+Pi-hole is a DNS sinkhole that protects your devices from unwanted content. It is freely available open-source software and is funded by donations and community development.
+			    </aside>
+				  <h1>What <span style=color:#00ff00;text-transform:lowercase>I</span>s P<span style=color:#00ff00;text-transform:lowercase>I</span>-hole?</h1>
+				  <img src="images/pi-hole-logo2.png"></img>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.1-->
+				  <aside class="notes">
+Pi-hole is a DNS sinkhole that protects your devices from unwanted content. It is freely available open-source software and is funded by donations and community development.
+			    </aside>
+	        <b>P<span style=color:#00ff00;text-transform:lowercase>I</span>-hole <span style=color:#00ff00;text-transform:lowercase>I</span>s a DNS s<span style=color:#00ff00;text-transform:lowercase>I</span>nkhole that </br>swallows unwanted content.</b></br>
+				  <img src="images/blackhole.png"></img></br>
+	      <b><span style=color:#00ff00;text-transform:lowercase>I</span>t <span style=color:#00ff00;text-transform:lowercase>I</span>s free and open source.</b>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.2-->
+				  <aside class="notes">
+When you visit a website, that website may have other content that is being loaded from other websites, such as advertising and ad-tracking software. Pi-hole blocks the requests for those websites. Pi-hole acts as a DNS server, that is, it associates IP addresses with name addresses.
+			    </aside>
+				  <h3>What does P<span style=color:#00ff00;text-transform:lowercase>I</span>-hole do?</h3>
+				  <p class="fragment fade-left"><b>P<span style=color:#00ff00;text-transform:lowercase>I</span>-hole blocks ad quer<span style=color:#00ff00;text-transform:lowercase>I</span>es.</b></p>
+			     <p class="fragment fade-left"><b>P<span style=color:#00ff00;text-transform:lowercase>I</span>-hole <span style=color:#00ff00;text-transform:lowercase>I</span>s a DNS server.</b></p>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.3-->
+				  <aside class="notes">
+This is how Pi-Hole works. Your browser makes a request for a website. That request is sent to Pi-Hole. Pi-Hole as a DNS server has a list of pre-loaded known advertising URLs. It checks if the website you requested is also requesting data to be sent from the black-list of URLs. If so, it blocks that content and only serves what’s on the website.
+			    </aside>
+				  <h3>How's <span style=color:#00ff00;text-transform:lowercase>I</span>t work?</h3>
+				  <img src="images/pi-hole-diagram.png"></img>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.4.-->
 				  <aside class="notes">
 
 			    </aside>
-				  <h1>What <span style=color:#00ff00;text-transform:lowercase>I</span>s P<span style=color:#00ff00;text-transform:lowercase>I</span>-hole?</h1>
+				  <h1></h1>
+				  <img src="images/pi-hole-logo2.png"></img>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.5-->
+				  <aside class="notes">
+
+			    </aside>
+				  <h1></h1>
+				  <img src="images/pi-hole-logo2.png"></img>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.6-->
+				  <aside class="notes">
+
+			    </aside>
+				  <h1></h1>
+				  <img src="images/pi-hole-logo2.png"></img>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.7-->
+				  <aside class="notes">
+
+			    </aside>
+				  <h1></h1>
+				  <img src="images/pi-hole-logo2.png"></img>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.8-->
+				  <aside class="notes">
+
+			    </aside>
+				  <h1></h1>
+				  <img src="images/pi-hole-logo2.png"></img>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.9-->
+				  <aside class="notes">
+
+			    </aside>
+				  <h1></h1>
+				  <img src="images/pi-hole-logo2.png"></img>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.10-->
+				  <aside class="notes">
+
+			    </aside>
+				  <h1>Q & A</h1>
+				  <img src="images/pi-hole-logo2.png"></img>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.11-->
+				  <aside class="notes">
+Resources
+			    </aside>
+				  <h3>Resources</h3>
+				  <p align="left" align="left"><small>ACLU (2019, Jun. 3) Coalition letter calling for a federal moratorium on face recognition. ACLU. Retrieved from https://www.aclu.org/letter/coalition-letter-calling-federal-moratorium-face-recognition</small></p>
+
+<p align="left"><small>Beadon, L. (Producer). (2019, Dec. 3). Techdirt podcast episode 233: Your secret consumer score [Audio podcast]. https://www.techdirt.com/articles/20191203/12402743497/techdirt-podcast-episode-233-your-secret-consumer-score.shtml.</small></p>
+
+<p align="left"><small>Cox, J. and Koebler, J. (2019, Dec. 19).Inside the podcast that hacks Ring camera owners live on air. Vice, Retrieved from https://www.vice.com/en_us/article/z3bbq4/podcast-livestreams-hacked-ring-cameras-nulledcast.</small></p>
+
+<p align="left"><small>Glass, E.R. (2019, Nov. 1). Open access in an age of surveillance technology. [Blog post]. Retrived from https://www.erinroseglass.com/open-access-in-an-age-of-surveillance-technology/.</small></p>
+
+<p align="left"><small>Hardesty, L. (2018, Feb. 11). Study finds gender and skin-type bias in commercial artificial-intelligence systems. MIT News, Retrieved from https://news.mit.edu/2018/study-finds-gender-skin-type-bias-artificial-intelligence-systems-0212.</small></p>
+</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 12-->
+				  <aside class="notes">
+Resources Continued
+			    </aside>
+				  <h3>Resources Cont<span style=color:#00ff00;text-transform:lowercase>I</span>nued</h3>
+				  <p align="left"><small>Hill, K. (2020, Jan. 18). The secretive company that might end privacy as we know it. New York Times, Retrieved from https://www.nytimes.com/2020/01/18/technology/clearview-privacy-facial-recognition.html.</small></p>
+
+<p align="left"><small>Hill, K. (2019, Nov. 4). I got access to my secret consumer score. now you can get yours, too. New York Times, Retrieved from https://www.nytimes.com/2019/11/04/business/secret-consumer-score-access.html</small></p>
+
+<p align="left"><small>King, E. (2019, Dec. 4). Chicago cops use social media to track grieving families of gunshot victims. Medium. Retrieved from https://onezero.medium.com/chicago-cops-use-social-media-to-track-grieving-families-of-gunshot-victims-e68e5a6dc40c</small></p>
+
+<p align="left"><small>lady ada (2017, Aug. 15). Install Pi Hole. Adafruit. Retrieved from https://learn.adafruit.com/pi-hole-ad-blocker-with-pi-zero-w/install-pi-hole</small></p>
+
+<p align="left"><small>Mac, R., Haskins C., and McDonald, L. (2020, Feb. 27). Clearview’s facial recognition app has been used by the Justice Department, ICE, Macy’s, Walmart, and the NBA. Buzzfeed. Retrieved from https://www.buzzfeednews.com/amphtml/ryanmac/clearview-ai-fbi-ice-global-law-enforcement</small></p>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE 2.13-->
+				  <aside class="notes">
+Resources Continued
+			    </aside>
+				  <h3>Resources Cont<span style=color:#00ff00;text-transform:lowercase>I</span>nued</h3>
+				  <p align="left"><small>Simonite, and T. Barber, G. (2019, Oct. 17). The delicate ethics of using facial recognition in schools. Wired, Retrieved from https://www.wired.com/story/delicate-ethics-facial-recognition-schools/.</small></p>
+
+<p align="left"><small>Zuboff, S. (2019). The age of surveillance capitalism. PublicAffairs.</small></p>
+				</section>
+
+	      <section data-background="images/black-logo.png">
+				  <!--PART 2 SLIDE X.X.-->
+				  <aside class="notes">
+
+			    </aside>
+				  <h1></h1>
 				  <img src="images/pi-hole-logo2.png"></img>
 				</section>
 
